# Car-launcher-pro

./: .env.example  .gitattributes  .gitignore  .vercelignore  ACTIVE_TASK.md  AI.md  APK_CIKTISI.md  ARCHITECTURE.md  ARCHITECTURE_DATAFLOW.md  AUDIT_EMPTY_FEATURES.md  AUDIT_FINDINGS.md  B2B_PITCH.md  BRUTAL_TRUTHS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITICAL_RISKS.md  FEATURES.md  GEMINI.md  HANDOFF.md  HARDENING_STRATEGY.md  K24_CAN_OBD_FINDINGS.md  LICENSE-PROPRIETARY.md  MAP_FOLLOW_FIELD_TEST.md  MARKETING_ONEPAGER.md  MEMORY.md  NIGHT_ERGONOMICS_REPORT.md  OBD_TELEMETRY_INTEGRATION_PLAN.md  OFFLINE_TILES_SETUP.md  PARKING_BRAKE_FIELD_TEST.md  PROGRESS.md  PROJECT_OVERVIEW.md  PROJECT_STATE.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SAFETY_ASSISTANT_STANDARD.md  SECURITY.md  SERVICE_WORKER_OFFLINE.md  (+28 more)
.claude/: car-launcher-pro - Kısayol.lnk  settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
android/: build.gradle  capacitor.settings.gradle  gradle.properties  key.properties.template  variables.gradle
android/app/src/main/cpp/: CMakeLists.txt  SignalBuffer.hpp  VehicleState.hpp  native-core.cpp
docs/: ASSISTANT_VEHICLE_INTEGRATION_PLAN.md  CAROS_15_YIL_VIZYON_YOL_HARITASI.md  CAROS_PROJE_HAKIMIYET_RAPORU.md  CAROS_PRO_VIZYONU.md  CAROS_VEHICLE_INTELLIGENCE_ARCHITECTURE.md  COMPANION_AI_ARCHITECTURE.md  DEVICE_VALIDATION_LEDGER.md  DEVICE_VALIDATION_PLAN_RENAULT_TRAFIC.md  FEATURE_FLAGS.md  HANDOFF_2026-07-06.md  HEAD_UNIT_MATRIX.md  OBD_DATA_SOURCES_LEGAL.md  OBD_DIAGNOSTIC_OS_ROADMAP.md  (+9 more)
(+1581 files in other folders)
